src/objects/Quality_Assurance__c.object
<CustomObject>
    <fields>
        <fullName>X8_Agent_offered_all_relevant_info__c</fullName>
        <label>8. Agent offered all relevant info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X8_Process_Updates_Timeframes__c</fullName>
        <description>Confirms accurate timeframes to the customer (where relevant)</description>
        <inlineHelpText>Confirms accurate timeframes to the customer (where relevant)</inlineHelpText>
        <label>8. Confirms accurate timeframes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9_Agent_gave_exception_customer_service__c</fullName>
        <label>9. Agent gave exception customer service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9_Closure_Additional_Assistance__c</fullName>
        <description>Offers additional assistance</description>
        <inlineHelpText>Offers additional assistance</inlineHelpText>
        <label>9. Offers additional assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quality Assurance Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Call_Reports</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Call_Score__c</columns>
        <columns>Call_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quality_Assurance__c.Call_Report</value>
        </filters>
        <label>Call Reports</label>
    </listViews>
    <listViews>
        <fullName>Call_ReportsCF</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Call_Score__c</columns>
        <columns>Call_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quality_Assurance__c.Call_Report</value>
        </filters>
        <filters>
            <field>X23_Was_the_call_compliant__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <label>Call Reports - Compliance Fail</label>
    </listViews>
    <listViews>
        <fullName>Email_Reports</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Email_Score__c</columns>
        <columns>Email_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quality_Assurance__c.Email_Report</value>
        </filters>
        <label>Email Reports</label>
    </listViews>
    <listViews>
        <fullName>Email_ReportsCF</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Email_Score__c</columns>
        <columns>Email_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Quality_Assurance__c.Email_Report</value>
        </filters>
        <filters>
            <field>X15_Compliance__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>X23_Was_the_call_compliant__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <filters>
            <field>Compliance_Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filters>
        <label>Email Reports Compliance Fail</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Quality Assurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance Reports</pluralLabel>
    <recordTypes>
        <fullName>Call_Report</fullName>
        <active>true</active>
        <label>Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Development_Call</fullName>
        <active>true</active>
        <label>Client Development Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Report</fullName>
        <active>true</active>
        <label>Email Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voicemail_Spot_Check</fullName>
        <active>true</active>
        <label>Voicemail Spot Check</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Call_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Call Report&quot;,

OR(
ISPICKVAL(X1_Agent_mentioned_the_company_name__c, &quot;&quot;) , 
ISPICKVAL(Did_the_agent_mention_his_her_name__c, &quot;&quot;) ,
ISPICKVAL(Did_the_agent_confirm_callers_name__c, &quot;&quot;) ,
ISPICKVAL(X4_Did_the_agent_confirm_callers_usernam__c, &quot;&quot;) ,
ISPICKVAL(X5_Did_agent_confirm_customers_DOB__c, &quot;&quot;) ,
ISPICKVAL(X6_Agent_confirmed_postcode_and_1st_Line__c, &quot;&quot;) ,
ISPICKVAL(X7_Agent_address_customer_query__c, &quot;&quot;) ,
ISPICKVAL(X8_Agent_offered_all_relevant_info__c, &quot;&quot;) ,
ISPICKVAL(X9_Agent_gave_exception_customer_service__c, &quot;&quot;) ,
ISPICKVAL(X10_Was_the_customer_pleased__c, &quot;&quot;) ,
ISPICKVAL(X24_Agent_added_relevant_notes_to_admin__c, &quot;&quot;) ,
ISPICKVAL(X11_Agent_offered_best_solution__c, &quot;&quot;) ,
ISPICKVAL(X12_Agent_Answered_Questions_Correctly__c, &quot;&quot;) ,
ISPICKVAL(X14_Agent_used_correct_on_hold_procedure__c, &quot;&quot;) ,
ISPICKVAL(X13_Agent_avoided_giving_finance_advice__c, &quot;&quot;) ,
ISPICKVAL(X15_Correct_call_transfer_used__c, &quot;&quot;) ,
ISPICKVAL(X16_Agent_offered_further_assistance__c, &quot;&quot;) ,
ISPICKVAL(X17_Agent_closed_call_appropriately__c, &quot;&quot;) ,
ISPICKVAL(X18_Agent_avoided__c, &quot;&quot;) ,
ISPICKVAL(X19_Agent_displayed_professional_manner__c, &quot;&quot;) ,
ISPICKVAL(X20_Agent_was_clear_and_confident__c, &quot;&quot;) ,
ISPICKVAL(X21_Agent_sounded_friendly_polite__c, &quot;&quot;) ,
ISPICKVAL(X22_Agent_used_effective_questioning__c, &quot;&quot;) ,
ISPICKVAL(X23_Was_the_call_compliant__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>You must answer all the questions to save the form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Number_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Case__c)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>You must associate a report with a case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_DevBorrower_Lender_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Borrower_Lender__c,  &quot;&quot;) ,RecordTypeId = &apos;01220000000VELX&apos;)</errorConditionFormula>
        <errorMessage>You must select whether this is a Borrower or Lender Call</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Dev_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Client Development Call&quot;, OR(User__c = &quot;&quot;,  Account__c = &quot;&quot;,  TEXT(Date_and_Time_of_Call__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>You must complete the Account, User and Date and Time of call fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Development_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Client Development Call&quot; , OR(ISPICKVAL(X1_Agent_mentioned_the_company_name__c, &quot;&quot;), 
ISPICKVAL(Did_the_agent_mention_his_her_name__c, &quot;&quot;), 
ISPICKVAL(Did_the_agent_confirm_callers_name__c, &quot;&quot;), 
ISPICKVAL(X4_Did_the_agent_confirm_callers_usernam__c, &quot;&quot;), 
ISPICKVAL( X5_Did_the_agent_mention_the_call_reason__c , &quot;&quot;), 
ISPICKVAL( X6_The_agent_didn_t_disclose_secure_info__c , &quot;&quot;), 
ISPICKVAL( X8_Agent_offered_all_relevant_info__c , &quot;&quot;), 
ISPICKVAL(X13_Agent_avoided_giving_finance_advice__c, &quot;&quot;), 
ISPICKVAL(X16_Agent_offered_further_assistance__c, &quot;&quot;), 
ISPICKVAL( X9_Agent_gave_exception_customer_service__c , &quot;&quot;), 
ISPICKVAL( X24_Agent_added_relevant_notes_to_admin__c , &quot;&quot;), 
ISPICKVAL( X11_Agent_offered_best_solution__c , &quot;&quot;), 
ISPICKVAL( X12_Agent_Answered_Questions_Correctly__c , &quot;&quot;), 
ISPICKVAL( X14_Agent_displayed_active_listening__c , &quot;&quot;), 
ISPICKVAL( X17_Agent_closed_call_appropriately__c , &quot;&quot;), 
ISPICKVAL( X18_Agent_avoided__c , &quot;&quot;), 
ISPICKVAL( X19_Agent_displayed_professional_manner__c , &quot;&quot;), 
ISPICKVAL( X20_Agent_was_clear_and_confident__c , &quot;&quot;), 
ISPICKVAL( X21_Agent_sounded_friendly_polite__c , &quot;&quot;), 
ISPICKVAL( X22_Agent_communicated_correct_attitude__c , &quot;&quot;), 
ISPICKVAL(X23_Was_the_call_compliant__c, &quot;&quot;)))</errorConditionFormula>
        <errorMessage>You must answer all the questions to save the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Email Report&quot; , OR
(
ISPICKVAL(X1_Data_Protection_Unauthorised_Sending__c, &quot;&quot;) ,
ISPICKVAL(X2_Greeting_Correct_Greeting_Used__c, &quot;&quot;) ,
ISPICKVAL(X3_Thanks_for_email__c, &quot;&quot;) ,
ISPICKVAL(X4_Solution_Explantion__c, &quot;&quot;) ,
ISPICKVAL(X5_Process_Updates_Explains_actions__c, &quot;&quot;) ,
ISPICKVAL(X6_Process_Updates_Escalation_Process__c, &quot;&quot;) ,
ISPICKVAL(X7_Process_Updates_Task_Completion__c, &quot;&quot;) ,
ISPICKVAL(X8_Process_Updates_Timeframes__c, &quot;&quot;) ,
ISPICKVAL(X9_Closure_Additional_Assistance__c, &quot;&quot;) ,
ISPICKVAL(X10_Customer_Experience_Extra_Mile__c, &quot;&quot;) ,
ISPICKVAL(X11_Customer_Experience_Grammar_etc__c, &quot;&quot;) ,
ISPICKVAL(X12_Customer_Experience_Language__c, &quot;&quot;) ,
ISPICKVAL(X13_Customer_Experience_Rationale__c, &quot;&quot;) ,
ISPICKVAL(X14_Customer_Experience_Future_Solutio__c, &quot;&quot;) ,
ISPICKVAL(X15_Compliance__c, &quot;&quot;)))</errorConditionFormula>
        <errorMessage>You must answer all questions (excluding comments)</errorMessage>
    </validationRules>
</CustomObject>